# rdfxml2jsonl

./: CLAUDE.md  README.md  pyproject.toml  rdfpress.py  rdfxml2jsonl.py
