[project]
name = "rdfpress"
version = "0.1.0"
description = "Bulk-convert RDF/XML to queryable JSONL, Parquet, or standards-compliant JSON-LD."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.0",
    "click>=8.0",
    "rich>=13.0",
    "fsspec>=2026.2.0",
    "orjson>=3.10",
    "duckdb>=1.0",
]

[project.scripts]
rdfpress = "rdfpress:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["rdfpress.py"]